将入口活动使用DrawerLayout重构，增加新的可能性 使用kotlin+协程重写了歌曲的ListAdapter 使用Glide加载图片

--- a/app/src/main/res/layout/item_audio.xml
+++ b/app/src/main/res/layout/item_audio.xml
@@ -53,7 +53,7 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/messages" />
+            app:srcCompat="@drawable/ic_launcher_foreground" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
