--- a/app/src/main/res/navigation/local_audio_navigation.xml
+++ b/app/src/main/res/navigation/local_audio_navigation.xml
@@ -5,7 +5,7 @@
 
     <fragment
         android:id="@+id/audioListFragment"
-        android:name="com.wh.mymusic.fragment.LocalAudioListFragment"
+        android:name="com.wh.mymusic.fragment.local.LocalSongListFragment"
         android:label="AudioListFragment" />
     <fragment
         android:id="@+id/blankFragment"
