增加webdav依赖 禁用了ssl检查 现在因为多线程问题无法进入子目录

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item name="local_song_tag" type="id"/>
     <item name="local_album_tag" type="id"/>
+    <item name="web_dav_path" type="id"/>
 </resources>
