--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -6,6 +6,9 @@
             app:key="settings_netease_music_api_server_address"
             app:title="netease music api address"
             app:useSimpleSummaryProvider="true" />
+        <Preference
+            app:key="goto_test_act"
+            app:title="test_web_dav"/>
 
 <!--        <ListPreference-->
 <!--            app:defaultValue="reply"-->
